[package]
name = "invil"
description = "A port of amboso to Rust"
version = "0.2.13"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/jgabaut/invil"
repository = "https://github.com/jgabaut/invil"
documentation = "https://github.com/jgabaut/amboso"
readme = "README.md"
exclude = [
    ".github/**",
    "try-anvil/**",
    "CODEOWNERS",
    "bin/",
    "stego.lock",
    "kazoj",
]

[features]

anvilPy = ["flate2", "tar", "url"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
flate2 = { version = "1.0.28", optional = true }
git2 = "0.18.3"
is_executable = "1.0.1"
log = "0.4.21"
regex = "1.10.4"
simplelog = "0.12.2"
tar = { version = "0.4.40", optional = true }
toml = "0.8.12"
url = { version = "2.5.0", optional = true }
