[package]
name = "invil"
description = "A port of amboso to Rust"
version = "0.2.16"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/jgabaut/invil"
repository = "https://github.com/jgabaut/invil"
documentation = "https://github.com/jgabaut/amboso/wiki"
readme = "README.md"
exclude = [
    ".github/**",
    "try-anvil/**",
    "CODEOWNERS",
    "bin/",
    "stego.lock",
    "kazoj",
    "bench",
]

[features]

anvilPy = ["dep:flate2", "dep:tar", "dep:url"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
flate2 = { version = "1.0.31", optional = true }
git2 = "0.19.0"
is_executable = "1.0.1"
log = "0.4.22"
regex = "1.10.6"
simplelog = "0.12.2"
tar = { version = "0.4.41", optional = true }
toml = "0.8.19"
url = { version = "2.5.2", optional = true }
