[package]
name = "invil"
description = "A port of amboso to Rust"
version = "0.2.24"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/jgabaut/invil"
repository = "https://github.com/jgabaut/invil"
documentation = "https://github.com/jgabaut/amboso/wiki"
readme = "README.md"
exclude = [
    ".github/**",
    "try-anvil/**",
    "CODEOWNERS",
    "bin/",
    "stego.lock",
    "kazoj",
    "bench",
]

[features]

anvilPy = ["dep:flate2", "dep:tar", "dep:url"]
anvilCustom = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
flate2 = { version = "1.1.2", optional = true }
git2 = "0.20.2"
is_executable = "1.0.4"
log = "0.4.27"
regex = "1.11.1"
simplelog = "0.12.2"
tar = { version = "0.4.44", optional = true }
toml = "0.8.23"
url = { version = "2.5.4", optional = true }
